--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "react-google-autocomplete": "^2.7.3",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0",
+    "vite-plugin-pwa": "^0.17.5",
     "yarn": "^1.22.21",
     "yup": "^1.3.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/babel__core": "^7.20.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
